bookings table responsive on mobile and tablet + fix navbar-collapse on tablet

--- a/app/assets/stylesheets/components/shared/_table.scss
+++ b/app/assets/stylesheets/components/shared/_table.scss
@@ -27,12 +27,10 @@
 
   .bookings-table-row, .bookers-table-row {
     display: table-row;
-    height: 100%;
     position: relative;
 
     div {
       padding: 0.5rem 1rem;
-      height: 100%;
     }
   }
 
@@ -61,4 +59,8 @@ header {
     padding: 1rem;
     text-align: center;
   }
+}
+
+.bookings-index form, .bookers-index form {
+  padding: 0.5rem 0;
 }
