--- a/app/assets/stylesheets/mediaqueries/_navbar.scss
+++ b/app/assets/stylesheets/mediaqueries/_navbar.scss
@@ -1,14 +1,26 @@
 @media screen and (max-width: 576px) {
-
+  .navbar.navbar-expand-md.navbar-light.navbar-lewagon {
+    padding: 0.5rem 0.5rem !important;
+  }
 }
 
 @media (max-width: 768px) {
   .navbar.navbar-expand-md.navbar-light.navbar-lewagon {
     background-color: white;
     max-width: 100%;
+    padding: 0.5rem 1rem;
+
+    .navbar-toggler {
+      display: block;
+      border: none !important;
+    }
   }
 
-  .navbar-collapse {
+  .navbar-lewagon .navbar-brand img {
+    height: 1.2rem;
+  }
+
+  .navbar-expand-md .navbar-collapse {
     background-color: white;
     text-align: center;
     margin-bottom: 0;
@@ -42,4 +54,20 @@
     height: 2rem;
     width: 2rem;
   }
+
+  @media (min-width: 768px) {
+    .navbar-expand-md {
+        flex-flow: row nowrap;
+        justify-content: space-between !important;
+
+      .navbar-collapse {
+        display: none !important;
+      }
+
+      .navbar-collapse.collapse.show {
+        display: flex !important;
+      }
+    }
+  }
 }
+
